package role.derived;

import role.base.Role;

public class Ordinary extends Role {

    @Override
    public String toString() {
        return "Ordinary";
    }
}
